--- a/PackageDelivery/nbproject/project.properties
+++ b/PackageDelivery/nbproject/project.properties
@@ -29,12 +29,14 @@ dist.jar=${dist.dir}/PackageDelivery.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jasperreports-6.9.0.jar=../../../Downloads/jasperreports-6.9.0.jar
 file.reference.mysql-connector-java-8.0.17.jar=../../JarsForJava/mysql-connector-java-8.0.17.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.beans-binding.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.17.jar}
+    ${file.reference.mysql-connector-java-8.0.17.jar}:\
+    ${file.reference.jasperreports-6.9.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
