Added employee related dummy classes, images, and index.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /Proyecto 2/MagazinesWebApplication/nbproject/private/
 /Proyecto 2/MagazinesWebApplication/build/
 /Proyecto 2/MagazinesWebApplication/dist/
+/Proyecto 3/Hospital/target/
